Fix white space at bottom of page

--- a/src/layout/global.scss
+++ b/src/layout/global.scss
@@ -27,5 +27,5 @@ body,
 }
 
 .pf-c-page {
-  height: 103%;
+  padding-bottom: 20px;
 }
